@@ -1,3 +1,15 @@
+2018-04-09  Michael Catanzaro  <mcatanzaro@igalia.com>
+
+        Unreviewed, rolling out r230390.
+
+        Broke accelerated compositing
+
+        Reverted changeset:
+
+        "[GTK] WaylandCompositorDisplay leaks its wl_display"
+        https://bugs.webkit.org/show_bug.cgi?id=184406
+        https://trac.webkit.org/changeset/230390
+
 2018-04-09  Carlos Garcia Campos  <cgarcia@igalia.com>
 
         Unreviewed. Fix title of 2.20 new symbols section in docs.
