@@ -1,5 +1,17 @@
 2018-04-09  Michael Catanzaro  <mcatanzaro@igalia.com>
 
+        Unreviewed, rolling out r230390.
+
+        Broke accelerated compositing
+
+        Reverted changeset:
+
+        "[GTK] WaylandCompositorDisplay leaks its wl_display"
+        https://bugs.webkit.org/show_bug.cgi?id=184406
+        https://trac.webkit.org/changeset/230390
+
+2018-04-09  Michael Catanzaro  <mcatanzaro@igalia.com>
+
         [GTK] WaylandCompositorDisplay leaks its wl_display
         https://bugs.webkit.org/show_bug.cgi?id=184406
 
